@@ -1,0 +1,32 @@
+Journal
+A simple diary or journal to keep track of your daily goings on.
+
+Has separate models to track the following and tie them together:
+
+*) Activities:
+  - Bike Rides
+  - Social Events
+  - Dining Out
+  
+*) People
+
+*) Media:
+  - Books
+  - Music
+  - Videos
+
+
+Copyright (C) 2010, Dirk Bergstrom, dirk@otisbean.com
+    
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
